Tidy up assignment 3, complete first part of assignment 4

--- a/tensorflow/examples/udacity/3_regularization.ipynb
+++ b/tensorflow/examples/udacity/3_regularization.ipynb
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -673,28 +673,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 21.198105\n",
-      "Minibatch accuracy: 14.1%\n",
-      "Validation accuracy: 18.5%\n",
-      "Minibatch loss at step 500: 0.151179\n",
-      "Minibatch accuracy: 95.3%\n",
-      "Validation accuracy: 72.7%\n",
-      "Minibatch loss at step 1000: 0.218221\n",
-      "Minibatch accuracy: 96.9%\n",
+      "Minibatch loss at step 0: 25.136267\n",
+      "Minibatch accuracy: 8.6%\n",
+      "Validation accuracy: 18.2%\n",
+      "Minibatch loss at step 500: 0.383703\n",
+      "Minibatch accuracy: 94.5%\n",
+      "Validation accuracy: 72.3%\n",
+      "Minibatch loss at step 1000: 0.069342\n",
+      "Minibatch accuracy: 98.4%\n",
       "Validation accuracy: 72.5%\n",
-      "Minibatch loss at step 1500: 0.004678\n",
-      "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 72.4%\n",
-      "Minibatch loss at step 2000: 0.000020\n",
-      "Minibatch accuracy: 100.0%\n",
+      "Minibatch loss at step 1500: 0.182242\n",
+      "Minibatch accuracy: 97.7%\n",
+      "Validation accuracy: 72.6%\n",
+      "Minibatch loss at step 2000: 0.062463\n",
+      "Minibatch accuracy: 97.7%\n",
       "Validation accuracy: 72.5%\n",
-      "Minibatch loss at step 2500: 0.152725\n",
+      "Minibatch loss at step 2500: 0.016114\n",
       "Minibatch accuracy: 99.2%\n",
-      "Validation accuracy: 72.7%\n",
-      "Minibatch loss at step 3000: 0.001380\n",
+      "Validation accuracy: 72.8%\n",
+      "Minibatch loss at step 3000: 0.000072\n",
       "Minibatch accuracy: 100.0%\n",
-      "Validation accuracy: 72.4%\n",
-      "Test accuracy: 79.4%\n"
+      "Validation accuracy: 72.9%\n",
+      "Test accuracy: 79.3%\n"
      ]
     }
    ],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -804,107 +804,36 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 34653.257812\n",
-      "Minibatch accuracy: 6.2%\n",
-      "Validation accuracy: 19.5%\n",
-      "Minibatch loss at step 100: 12158.335938\n",
-      "Minibatch accuracy: 19.5%\n",
-      "Validation accuracy: 15.7%\n",
-      "Minibatch loss at step 200: 4462.689453\n",
-      "Minibatch accuracy: 28.1%\n",
-      "Validation accuracy: 25.0%\n",
-      "Minibatch loss at step 300: 1638.559570\n",
-      "Minibatch accuracy: 38.3%\n",
-      "Validation accuracy: 41.2%\n",
-      "Minibatch loss at step 400: 602.074890\n",
-      "Minibatch accuracy: 58.6%\n",
-      "Validation accuracy: 55.0%\n",
-      "Minibatch loss at step 500: 221.891785\n",
-      "Minibatch accuracy: 64.8%\n",
-      "Validation accuracy: 69.6%\n",
-      "Minibatch loss at step 600: 82.285843\n",
-      "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 76.0%\n",
-      "Minibatch loss at step 700: 31.336655\n",
-      "Minibatch accuracy: 74.2%\n",
-      "Validation accuracy: 75.8%\n",
-      "Minibatch loss at step 800: 12.614679\n",
-      "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 77.1%\n",
-      "Minibatch loss at step 900: 5.559041\n",
-      "Minibatch accuracy: 85.2%\n",
-      "Validation accuracy: 77.0%\n",
-      "Minibatch loss at step 1000: 3.223544\n",
-      "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 76.0%\n",
-      "Minibatch loss at step 1100: 2.284758\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 76.7%\n",
-      "Minibatch loss at step 1200: 1.963577\n",
-      "Minibatch accuracy: 78.1%\n",
-      "Validation accuracy: 76.8%\n",
-      "Minibatch loss at step 1300: 1.725125\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 77.0%\n",
-      "Minibatch loss at step 1400: 1.868476\n",
-      "Minibatch accuracy: 76.6%\n",
-      "Validation accuracy: 76.6%\n",
-      "Minibatch loss at step 1500: 1.693639\n",
-      "Minibatch accuracy: 76.6%\n",
-      "Validation accuracy: 76.9%\n",
-      "Minibatch loss at step 1600: 1.748191\n",
-      "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 77.0%\n",
-      "Minibatch loss at step 1700: 1.702639\n",
-      "Minibatch accuracy: 71.9%\n",
-      "Validation accuracy: 76.9%\n",
-      "Minibatch loss at step 1800: 1.780659\n",
-      "Minibatch accuracy: 71.9%\n",
-      "Validation accuracy: 76.3%\n",
-      "Minibatch loss at step 1900: 1.689730\n",
+      "Minibatch loss at step 0: 17149.324219\n",
+      "Minibatch accuracy: 12.1%\n",
+      "Validation accuracy: 12.2%\n",
+      "Minibatch loss at step 500: 8582.963867\n",
+      "Minibatch accuracy: 75.4%\n",
+      "Validation accuracy: 75.7%\n",
+      "Minibatch loss at step 1000: 4005.075928\n",
+      "Minibatch accuracy: 77.9%\n",
+      "Validation accuracy: 77.7%\n",
+      "Minibatch loss at step 1500: 1663.568726\n",
+      "Minibatch accuracy: 78.5%\n",
+      "Validation accuracy: 78.0%\n",
+      "Minibatch loss at step 2000: 614.860718\n",
       "Minibatch accuracy: 79.7%\n",
-      "Validation accuracy: 76.8%\n",
-      "Minibatch loss at step 2000: 1.656662\n",
-      "Minibatch accuracy: 78.1%\n",
-      "Validation accuracy: 77.2%\n",
-      "Minibatch loss at step 2100: 1.678770\n",
-      "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 77.0%\n",
-      "Minibatch loss at step 2200: 1.681470\n",
-      "Minibatch accuracy: 78.1%\n",
-      "Validation accuracy: 76.9%\n",
-      "Minibatch loss at step 2300: 1.635674\n",
-      "Minibatch accuracy: 77.3%\n",
-      "Validation accuracy: 77.5%\n",
-      "Minibatch loss at step 2400: 1.673050\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 76.7%\n",
-      "Minibatch loss at step 2500: 1.606106\n",
-      "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 77.1%\n",
-      "Minibatch loss at step 2600: 1.627078\n",
-      "Minibatch accuracy: 76.6%\n",
-      "Validation accuracy: 76.8%\n",
-      "Minibatch loss at step 2700: 1.796539\n",
-      "Minibatch accuracy: 69.5%\n",
-      "Validation accuracy: 76.4%\n",
-      "Minibatch loss at step 2800: 1.652020\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 77.3%\n",
-      "Minibatch loss at step 2900: 1.689581\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 76.7%\n",
-      "Minibatch loss at step 3000: 1.581776\n",
-      "Minibatch accuracy: 82.8%\n",
-      "Validation accuracy: 77.2%\n",
-      "Test accuracy: 84.0%\n"
+      "Validation accuracy: 78.7%\n",
+      "Minibatch loss at step 2500: 203.643860\n",
+      "Minibatch accuracy: 79.9%\n",
+      "Validation accuracy: 79.8%\n",
+      "Minibatch loss at step 3000: 64.051926\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 83.8%\n",
+      "Test accuracy: 90.0%\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 128\n",
-    "n_hidden1 = 1024\n",
-    "n_hidden2 = 50\n",
+    "batch_size = 512\n",
+    "n_hidden1 = 400\n",
+    "n_hidden2 = 200\n",
+    "#n_hidden3 = 50\n",
     "nn_reg = 0.1\n",
     "test_dataset = test_dataset.astype('float32')\n",
     "train_dataset = train_dataset.astype('float32')\n",
@@ -937,6 +866,11 @@
     "    weights_h2 = tf.Variable(\n",
     "                            tf.truncated_normal([n_hidden1, n_hidden2]))\n",
     "    biases_h2 = tf.Variable(tf.zeros([n_hidden2]))\n",
+    "    \n",
+    "     # Variables (hidden layer3)\n",
+    "  #  weights_h3 = tf.Variable(\n",
+    "#                            tf.truncated_normal([n_hidden2, n_hidden3]))\n",
+    "  #  biases_h3 = tf.Variable(tf.zeros([n_hidden3]))\n",
     "\n",
     "\n",
     "    \n",
@@ -945,6 +879,8 @@
     "    hidden1 = tf.nn.relu(hidden1)\n",
     "    hidden2 = tf.matmul(hidden1, weights_h2) + biases_h2\n",
     "    hidden2 = tf.nn.relu(hidden2)\n",
+    "   # hidden3 = tf.matmul(hidden2, weights_h3) + biases_h3\n",
+    "   # hidden3 = tf.nn.relu(hidden3)\n",
     "    logits = tf.matmul(hidden2, weights_o) + biases_o\n",
     "    loss = tf.reduce_mean(\n",
     "    tf.nn.softmax_cross_entropy_with_logits(logits, tf_train_labels))+ nn_reg*(tf.nn.l2_loss(weights_o)+\n",
@@ -953,9 +889,9 @@
     "                                                                              )\n",
     "  \n",
     "    # Optimizer.\n",
-    "    optimizer = tf.train.GradientDescentOptimizer(0.05).minimize(loss)\n",
+    "    optimizer = tf.train.AdamOptimizer().minimize(loss)\n",
     "    #global_step = tf.Variable(0)  # count the number of steps taken.\n",
-    "    #learning_rate = tf.train.exponential_decay(0.1, global_step,100,0.9)\n",
+    "    #learning_rate = tf.train.exponential_decay(0.01, global_step,100,0.2)\n",
     "    #optimizer = tf.train.GradientDescentOptimizer(learning_rate).minimize(loss, global_step=global_step)\n",
     "  \n",
     "    # Predictions for the training, validation, and test data.\n",
@@ -969,8 +905,7 @@
     "                                tf_valid_dataset,weights_h1)+biases_h1),\n",
     "                        weights_h2)+\n",
     "                        biases_h2),\n",
-    "                        weights_o) +\n",
-    "                        biases_o)\n",
+    "                        weights_o)+biases_o)\n",
     "    test_prediction = tf.nn.softmax(\n",
     "                        tf.matmul(\n",
     "                        tf.nn.relu(\n",
@@ -978,8 +913,9 @@
     "                        tf.nn.relu(\n",
     "                        tf.matmul(\n",
     "                                tf_test_dataset,weights_h1)+biases_h1),\n",
-    "                        weights_h2)+biases_h2),\n",
-    "                        weights_o) + biases_o)\n",
+    "                        weights_h2)+\n",
+    "                        biases_h2),\n",
+    "                        weights_o)+biases_o)\n",
     "    \n",
     "    \n",
     "\n",
@@ -999,7 +935,7 @@
     "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
     "        _, l, predictions = session.run(\n",
     "          [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "        if (step % 250 == 0):\n",
+    "        if (step % 500 == 0):\n",
     "          print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
     "          print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "          print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
@@ -1011,11 +947,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Learning rate needs to be tuned to avoid nan issues during training..."
+    "Learning rate needs to be tuned (lower) to avoid nan issues during training...\n",
+    "\n",
+    "Also, more than 2 hidden layers leads to bad performance. \n",
+    "\n",
+    "Note that best performance so far is 1 layer, with regularisation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "colab": {
    "default_view": {},
    "name": "3_regularization.ipynb",
